2008-01-16  Frederic Peters  <fpeters@0d.be>

	* Makefile.am, configure.ac: updated bug-report part of AC_INIT to
	point to Bugzilla instead of James email.  Updated with a GNOME version
	number and make dist(check) support to be nice.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, doc/C/figures/jhbuild_sample_dot_output.png,
	doc/Makefile.am: added a figure with sample output from the dot
	command.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: fixed dot command to work with latest Tarball
	changes.

2008-01-16  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-external-deps-2.22.modules:
	Bump system-tools-backends version to 2.5.6.

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: updated documentation with contribution from David
	Turner and some other minor updates by myself.   (closes: #341169)

2008-01-16  Frederic Peters  <fpeters@0d.be>

	* Makefile.am: add files that should be part of .tar.gz

2008-01-16  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules: Updated dbus to 1.1.3
	aka 1.2.0RC1 ("If nothing is found to be wrong with this release 
	it will become 1.2.0 within a week"). Better test it...

2008-01-15  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.22.modules: Add missing
	dependencies for cheese and vinagre.

2008-01-15  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.22.modules: gnome-panel now
	needs libgweather and librsvg. Plus add PolicyKit* as <suggests>.

2008-01-15  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules: Added to exempi module
	autogenargs="--enable-unittest=no". Unfortunately it seems that
	libopenraw needs Boost.
	
2008-01-14  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-suites-2.22.modules: Remove duplicate libgweather
	entry.

2008-01-14  Frederic Peters  <fpeters@0d.be>
