@@ -1,5 +1,10 @@
 2008-01-16  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/git.py: fixed git usage when combined with
+	buildroot, patch by Sylvain Pasche.  (closes: #509468)
+
+2008-01-16  Frederic Peters  <fpeters@0d.be>
+
 	* Makefile.am, configure.ac: updated bug-report part of AC_INIT to
 	point to Bugzilla instead of James email.  Updated with a GNOME version
 	number and make dist(check) support to be nice.
